Images floated with rating underneath, spacing issue on first line

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,3 +16,12 @@ h1 {
 .submit {
     margin-top: 2%;
 }
+
+figure {
+    display: inline-block;
+}
+
+figure.floatLeft { 
+    float: left; 
+    margin: 4px; 
+}
